--- a/README
+++ b/README
@@ -3,3 +3,7 @@ Development Notes
 
 * In order to view the dump() statements, you need to enable debugging:
   http://developer.mozilla.org/en/docs/DOM:window.dump
+
+* In about:config, make sure to set 'javascript.options.showInConsole'
+  to 'true' or else JS chrome errors won't show up in the error
+  console.
