Added test suite, although it doesn't yet have any tests.

--- a/README
+++ b/README
@@ -1,3 +1,10 @@
+Test Suite
+----------
+
+* Once the extension is installed, the Friday test suite can be run at:
+
+    chrome://friday/content/test.html
+
 Development Notes
 -----------------
 
