Renamed a bunch more stuff from 'friday' to 'ubiquity'.
--HG--
rename : friday/chrome.manifest => ubiquity/chrome.manifest
rename : friday/chrome/content/browser.js => ubiquity/chrome/content/browser.js
rename : friday/chrome/content/browser.xul => ubiquity/chrome/content/browser.xul
rename : friday/chrome/content/builtincmds.js => ubiquity/chrome/content/builtincmds.js
rename : friday/chrome/content/cmdmanager.js => ubiquity/chrome/content/cmdmanager.js
rename : friday/chrome/content/cmdutils.js => ubiquity/chrome/content/cmdutils.js
rename : friday/chrome/content/editor.html => ubiquity/chrome/content/editor.html
rename : friday/chrome/content/msgservice.js => ubiquity/chrome/content/msgservice.js
rename : friday/chrome/content/prefcommands.js => ubiquity/chrome/content/prefcommands.js
rename : friday/chrome/content/sandboxfactory.js => ubiquity/chrome/content/sandboxfactory.js
rename : friday/chrome/content/test.css => ubiquity/chrome/content/test.css
rename : friday/chrome/content/test.html => ubiquity/chrome/content/test.html
rename : friday/chrome/content/test.js => ubiquity/chrome/content/test.js
rename : friday/chrome/content/tests.js => ubiquity/chrome/content/tests.js
rename : friday/chrome/content/friday.js => ubiquity/chrome/content/ubiquity.js
rename : friday/components/autocomplete.js => ubiquity/components/autocomplete.js
rename : friday/install.rdf => ubiquity/install.rdf
rename : friday/modules/cmdregistry.js => ubiquity/modules/cmdregistry.js

--- a/README
+++ b/README
@@ -1,9 +1,9 @@
 Test Suite
 ----------
 
-* Once the extension is installed, the Friday test suite can be run at:
+* Once the extension is installed, the Ubiquity test suite can be run at:
 
-    chrome://friday/content/test.html
+    chrome://ubiquity/content/test.html
 
 Development Notes
 -----------------
