--- a/ubiquity/standard-feeds/localization/general.pot
+++ b/ubiquity/standard-feeds/localization/general.pot
@@ -1,7 +1,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Ubiquity 0.5\n"
-"POT-Creation-Date: 2009-06-18 21:26+0900\n"
+"POT-Creation-Date: 2009-06-19 11:07+0900\n"
 
 #. bold command:
 msgid "bold.names"
@@ -229,15 +229,15 @@ msgid "translate.contributors"
 msgstr ""
 
 msgid "translate.help"
-msgstr "You can specify the language to translate to,"
-       "    and the language to translate from."
-       "    For example, try issuing \"translate mother from english to chinese\"."
-       "    If you leave out the languages, it will try to guess what you want."
-       "    It works on selected text in any web page,"
-       "    but there's a limit (a couple of paragraphs)"
-       "    to how much it can translate a selection at once."
-       "    If you want to translate a lot of text, leave out the input and"
-       "    it will translate the whole page."
+msgstr "You can specify the language to translate to,\n"
+"    and the language to translate from.\n"
+"    For example, try issuing \"translate mother from english to chinese\".\n"
+"    If you leave out the languages, it will try to guess what you want.\n"
+"    It works on selected text in any web page,\n"
+"    but there's a limit (a couple of paragraphs)\n"
+"    to how much it can translate a selection at once.\n"
+"    If you want to translate a lot of text, leave out the input and\n"
+"    it will translate the whole page."
 
 msgid "translate.description"
 msgstr "Translates from one language to another."
@@ -269,10 +269,10 @@ msgid "create search command.contributors"
 msgstr "Abimanyu Raja|satyr"
 
 msgid "create search command.help"
-msgstr "<ol style=\"list-style-image:none\">"
-       "  <li>Select a searchbox.</li>"
-       "  <li>Execute this command to create the new search command.</li>"
-       "</ol>"
+msgstr "<ol style=\"list-style-image:none\">\n"
+"  <li>Select a searchbox.</li>\n"
+"  <li>Execute this command to create the new search command.</li>\n"
+"</ol>"
 
 msgid "create search command.description"
 msgstr "Creates a new Ubiquity command from a focused search-box."
