i18n: update calendar.ja.po

--- a/ubiquity/standard-feeds/localization/calendar.ja.po
+++ b/ubiquity/standard-feeds/localization/calendar.ja.po
@@ -3,7 +3,7 @@ msgstr ""
 "Project-Id-Version: Ubiquity\n"
 "POT-Creation-Date: \n"
 "PO-Revision-Date: \n"
-"Last-Translator: Michael 芳貴 Erlewine <mitcho@mitcho.com>\n"
+"Last-Translator: Masahiko Imanaka <chimantaea_mirabilis@yahoo.co.jp>\n"
 "Language-Team: \n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
